Texture won't display or won't do correctly on eevee when used as bump and other input #70614

Closed
opened 2019-10-07 19:07:22 +02:00 by Daniel Calderón · 10 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GT 555M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-05 20:51, hash: 4707f1982d
Worked: (optional)

Short description of error
Texture won't display or won't do correctly on eevee when used as bump and other input.
If I connect it only to normal, with a bump node between it works fine, but if I use that same texture to also drive the albedo, either connecting it directly or throught some nodes it won't work, affecting only the albedo.
If I use that same texture as a roughness and bump map, it will display correctly as roughness but not for the normal input.
Workaround is duplicating that same texture (shift + D).bug_tank.blend

Exact steps for others to reproduce the error
Plug a texture output in two different inputs of a principled material. bug_tank.blend
{F7794994}attached .blend file

EDIT: I sent a version without the image packed and don't know how to delete the older version without it, so the bigger one is the right file to open.

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GT 555M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-05 20:51, hash: `4707f1982d` Worked: (optional) **Short description of error** Texture won't display or won't do correctly on eevee when used as bump and other input. If I connect it only to normal, with a bump node between it works fine, but if I use that same texture to also drive the albedo, either connecting it directly or throught some nodes it won't work, affecting only the albedo. If I use that same texture as a roughness and bump map, it will display correctly as roughness but not for the normal input. Workaround is duplicating that same texture (shift + D).[bug_tank.blend](https://archive.blender.org/developer/F7795003/bug_tank.blend) **Exact steps for others to reproduce the error** Plug a texture output in two different inputs of a principled material. [bug_tank.blend](https://archive.blender.org/developer/F7794992/bug_tank.blend) {[F7794994](https://archive.blender.org/developer/F7794994/bug_tank.blend)}attached .blend file EDIT: I sent a version without the image packed and don't know how to delete the older version without it, so the bigger one is the right file to open.

Added subscriber: @xdanic

Added subscriber: @xdanic

#70611 was marked as duplicate of this issue

#70611 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking... (assume this is caused by ffd5e1e6ac)

Can confirm, checking... (assume this is caused by ffd5e1e6acd2)
Clément Foucault was assigned by Philipp Oeser 2019-10-08 18:06:23 +02:00
Member

Actually caused by 5c79f2d0fb...

Actually caused by 5c79f2d0fb...
Member

@fclem: havent done performance checks, not sure if this defeats the purpose of backwards iter [could even be worse!], but if we check if the links are actually the same, we can fix by P1133
(couldnt find a quick check on a socket to see if it has more than one link...)

@fclem: havent done performance checks, not sure if this defeats the purpose of backwards iter [could even be worse!], but if we check if the links are actually the same, we can fix by [P1133](https://archive.blender.org/developer/P1133.txt) (couldnt find a quick check on a socket to see if it has more than one link...)
Member

note: nodeCountSocketLinks could be used in P1133 [still not sure if that defeats the purpose / kills performance]

note: `nodeCountSocketLinks` could be used in [P1133](https://archive.blender.org/developer/P1133.txt) [still not sure if that defeats the purpose / kills performance]
Added subscribers: @SpectreFirst, @fclem, @EAW, @Likkez-2, @mano-wii, @NahuelBelich

This issue was referenced by f61a8a2abd

This issue was referenced by f61a8a2abd07ee879f9bc860230e0dd3e6ee6a0c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70614
No description provided.